--- a/bluetools/src/main/res/layout/activity_testupload.xml
+++ b/bluetools/src/main/res/layout/activity_testupload.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/priority"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:text="0"
+        />
 
     <Button
-        android:id="@+id/startQueue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="开启队列"
-        />
-    <Button
-        android:id="@+id/addQueue"
+        android:id="@+id/addTask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="添加一个任务"
         />
-    <Button
-        android:id="@+id/addTaskStopOtherTask"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="添加一个任务，暂停其他的任务"
-        android:visibility="gone"
-        />
-    <Button
-        android:id="@+id/openOtherTask"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="开启其他任务"
-        />
+
+
 </LinearLayout>
